terraform-aws/VPC and NAT/nat.tf
# Nat Gateway
resource "aws_eip" "nat" {
  vpc = true
}

# NAT Publico
resource "aws_nat_gateway" "nat-gw" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.main-public-1.id
  depends_on = [
    aws_internet_gateway.main-gw
  ]
}

# Rota padrão para NAT Gateway
resource "aws_route_table" "main-private" {
  vpc_id = aws_vpc.main-vpc.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat-gw.id
  }

  tags = {
    "Route-Name" = "main-private-nat-route"
  }
}

# Associando a rota padrão às sub-redes privadas
resource "aws_route_table_association" "main-private-1-route-association" {
  subnet_id      = aws_subnet.main-private-1.id
  route_table_id = aws_route_table.main-private.id
}

resource "aws_route_table_association" "main-private-2-route-association" {
  subnet_id      = aws_subnet.main-private-2.id
  route_table_id = aws_route_table.main-private.id
}

resource "aws_route_table_association" "main-private-3-route-association" {
  subnet_id      = aws_subnet.main-private-3.id
  route_table_id = aws_route_table.main-private.id
}
